--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,4 @@ markers =
     smoke: marker for smoke tests
     regression: marker for regression tests
     login_guest: marker for login tests with guest role
+    need_review: hope you have fun when you review it
